// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should march Snapshot - screen 1`] = `
<section
  data-testid="my-awesome-app"
>
  <h1
    data-testid="first-name-title"
  >
     
    Cesar
     
  </h1>
  <h3>
     
    Aparicio
     
  </h3>
  <h3>
     
    Aparicio
     Aqui mas 
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Elden Ring, Smash, Metal Gear
  </p>
  <p>
    4
  </p>
  <h1>
    No activo
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px; color: rgb(51, 51, 51);"
  >
    {"zipCode":"ABC-123","country":"Canadá"}
  </p>
</section>
`;

exports[`MyAwesomeApp > should march Snapshot 1`] = `
<div>
  <section
    data-testid="my-awesome-app"
  >
    <h1
      data-testid="first-name-title"
    >
       
      Cesar
       
    </h1>
    <h3>
       
      Aparicio
       
    </h3>
    <h3>
       
      Aparicio
       Aqui mas 
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Elden Ring, Smash, Metal Gear
    </p>
    <p>
      4
    </p>
    <h1>
      No activo
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px; color: rgb(51, 51, 51);"
    >
      {"zipCode":"ABC-123","country":"Canadá"}
    </p>
  </section>
</div>
`;
